# multiple-grasping-pose-learning

./: CMakeLists.txt  LICENSE  README.md  fc.rosinstall  gripper.dae  gripper.dae~  memo  package.xml
dataset/: deploy_output.ply
dataset/aug_data/: label_map.pbtxt
dataset/rgb/01/: frame00.json  frame01.json  frame02.json  labels.txt
dataset/rgb/voc/: class_names.txt
dataset/rgb/voc/SegmentationObject/: frame00.npy  frame01.npy  frame02.npy
discarded/: data_collection.cpp
doc/: manual.docx
euslisp/: collect_data.l  collect_data_turntable.l  collect_data_turntable.l~  execution.l  execution.l~
launch/: data_collection_turntable.launch  data_collection_turntable.launch~  deploy.launch  deploy.launch~
models/: deeplabv3_mnv2_custom.tflite  labels.txt  my_label.txt
models/mkamodel/: mkanet.py
models/mkamodel/log/: checkpoint  log_train.txt  model.ckpt.data-00000-of-00001  model.ckpt.index
scripts/: corner.py~  demo.py  demo.py~  frame00.json  grasp_prediction_server.py  grasp_prediction_server.py~  label.json  object_detection_server.py  object_detection_server.py~  semantic_segmentation_server.py  semantic_segmentation_server.py~
src/: data_collection_turntable.cpp  data_collection_turntable.cpp~  demo.cpp  deploy.cpp  deploy.cpp~
srv/: getobjectpose.srv  gettablepose.srv  graspanobject.srv  graspanobject.srv~  grasppredict.srv  grasppredict.srv~  objectdetect.srv~
utils/: CMakeLists.txt~  clean_dataset.sh  create_armarker.py  create_armarker.py~  create_dataset.sh  data_augmentation_bbox.py  data_augmentation_bbox.py~  data_augmentation_bbox_turntable.py  data_augmentation_bbox_turntable.py~  data_augmentation_mask.py  data_augmentation_mask.py~  generate_voc_data.sh  get_point_position.cpp  get_point_position.cpp~  label.json  label_generation_labelme_ver.py  label_generation_labelme_ver.py~  label_generation_voc_ver.py  partition.sh  partition.sh~  partition_dataset.py  test.json  test.py  test.py~
utils/demo/: generate_tfrecord.py
utils/mkanet_utils/: data_augmentation.py  data_augmentation.py~  tf_ops_complie.sh
utils/mkanet_utils/dataset/grasp/: frame00.ply  frame00.txt  frame00.txt~  frame01.ply  frame01.txt  frame02.ply  frame02.txt  frame03.ply  (+3 more)
utils/mkanet_utils/pointnet_utils/: pointnet_util.py  pointnet_util.py~
utils/object_detection_training_utils/: generate_record.sh  train.sh
utils/object_detection_training_utils/docker/: README.md  train_object_detection_dlbox.sh
utils/object_detection_training_utils/models/: convert.sh
(+20 files in other folders)
